# serenity-test

./: Cargo.toml
src/: main.rs
src/commands/: ping.rs
