[package]
name = "serenity-test"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.5"
dotenv = "0.15"
tracing = "0.1.27"
tracing-subscriber = "0.3.18"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.0"
features = ["cache", "framework", "standard_framework", "rustls_backend"]